--- a/Commercial Janitorial Services/admin/orders.html
+++ b/Commercial Janitorial Services/admin/orders.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Orders - NovaSite Admin</title>
+    <title>Manage Orders - NovaSite Admin</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
 
     <!-- FOUC Prevention - Apply theme and RTL immediately -->
     <script>
@@ -114,12 +117,27 @@
                     </a>
 
                     <!-- Mobile-only Notifications -->
-                    <a href="#"
-                        class="lg:hidden flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
-                        <i class="fa-solid fa-bell w-6"></i>
-                        <span>Notifications</span>
-                        <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
-                    </a>
+                    <div class="lg:hidden">
+                        <button id="notifications-toggle"
+                            class="w-full flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                            <i class="fa-solid fa-bell w-6"></i>
+                            <span>Notifications</span>
+                            <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
+                        </button>
+                        <div id="notifications-dropdown-mobile"
+                            class="hidden pl-10 pr-4 py-2 space-y-4 border-l-2 border-primary-100 dark:border-primary-900/30 ms-4 mt-2">
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">New Client Registered</p>
+                                <p class="text-xs text-gray-500">2 mins ago</p>
+                            </div>
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">Database Backup</p>
+                                <p class="text-xs text-gray-500">1 hour ago</p>
+                            </div>
+                            <a href="#" class="block text-xs text-primary-500 font-bold hover:underline py-2">View all
+                                notifications</a>
+                        </div>
+                    </div>
 
                     <!-- Mobile-only Preferences -->
                     <div class="lg:hidden mt-8 pt-8 border-t border-gray-100 dark:border-gray-800">
@@ -323,13 +341,13 @@
     <!-- Create Order Modal -->
     <div id="orderModal" class="fixed inset-0 z-[60] hidden">
         <!-- Backdrop -->
-        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-opacity"></div>
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-opacity" onclick="closeModal()"></div>
 
         <!-- Modal Content -->
-        <div class="absolute inset-0 flex items-center justify-center p-4">
+        <div class="absolute inset-0 flex items-center justify-center p-4 pointer-events-none">
             <div
-                class="bg-white dark:bg-dark-card w-full max-w-lg rounded-3xl shadow-2xl transform transition-all overflow-hidden border border-gray-100 dark:border-gray-800">
-                <div class="p-8">
+                class="bg-white dark:bg-dark-card w-full max-w-lg rounded-3xl shadow-2xl transform transition-all overflow-hidden border border-gray-100 dark:border-gray-800 pointer-events-auto">
+                <div class="p-5 sm:p-8">
                     <div class="flex items-center justify-between mb-8">
                         <h3 class="text-2xl font-bold font-heading dark:text-white">Create New Order</h3>
                         <button id="closeModal"
@@ -377,6 +395,58 @@
                                 Order</button>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- View Order Modal -->
+    <div id="viewModal" class="fixed inset-0 z-[60] hidden">
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-opacity" onclick="closeViewModal()"></div>
+        <div class="absolute inset-0 flex items-center justify-center p-4 pointer-events-none">
+            <div
+                class="bg-white dark:bg-dark-card w-full max-w-md rounded-3xl shadow-2xl transform transition-all overflow-hidden border border-gray-100 dark:border-gray-800 pointer-events-auto">
+                <div class="p-5 sm:p-8">
+                    <div class="flex items-center justify-between mb-6">
+                        <h3 class="text-xl font-bold font-heading dark:text-white">Order Details</h3>
+                        <button onclick="closeViewModal()"
+                            class="text-gray-400 hover:text-gray-600 dark:hover:text-white transition-colors">
+                            <i class="fa-solid fa-xmark text-xl"></i>
+                        </button>
+                    </div>
+                    <div id="orderDetails" class="space-y-4">
+                        <!-- Details will be injected here -->
+                    </div>
+                    <div class="mt-8">
+                        <button onclick="closeViewModal()"
+                            class="w-full py-3 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-white font-bold rounded-xl hover:bg-gray-200 transition-all">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div id="deleteModal" class="fixed inset-0 z-[60] hidden">
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-opacity" onclick="closeDeleteModal()">
+        </div>
+        <div class="absolute inset-0 flex items-center justify-center p-4 pointer-events-none">
+            <div
+                class="bg-white dark:bg-dark-card w-full max-w-sm rounded-3xl shadow-2xl transform transition-all overflow-hidden border border-gray-100 dark:border-gray-800 pointer-events-auto">
+                <div class="p-5 sm:p-8 text-center">
+                    <div
+                        class="w-16 h-16 bg-red-100 dark:bg-red-900/30 text-red-600 flex items-center justify-center rounded-2xl mx-auto mb-4">
+                        <i class="fa-solid fa-trash-can text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-bold font-heading dark:text-white mb-2">Delete Order?</h3>
+                    <p class="text-gray-500 text-sm mb-6">Are you sure you want to delete order <span id="deleteOrderId"
+                            class="font-bold"></span>? This action cannot be undone.</p>
+                    <div class="flex gap-4">
+                        <button onclick="closeDeleteModal()"
+                            class="flex-1 py-3 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-white font-bold rounded-xl hover:bg-gray-200 transition-all">Cancel</button>
+                        <button id="confirmDelete"
+                            class="flex-1 py-3 bg-red-500 text-white font-bold rounded-xl hover:bg-red-600 shadow-lg shadow-red-500/30 transition-all">Delete</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -571,6 +641,12 @@
         function closeModal() {
             modal.classList.add('hidden');
             document.body.style.overflow = 'auto';
+
+            // Reset modal title and button to default (Create mode)
+            const modalTitle = modal.querySelector('h3');
+            const submitBtn = modal.querySelector('button[type="submit"]');
+            if (modalTitle) modalTitle.textContent = 'Create New Order';
+            if (submitBtn) submitBtn.textContent = 'Create Order';
         }
 
         createBtn?.addEventListener('click', openModal);
@@ -579,6 +655,46 @@
 
         modal?.addEventListener('click', (e) => {
             if (e.target === modal) closeModal();
+        });
+
+        // View Modal Functions
+        function openViewModal(content) {
+            const container = document.getElementById('orderDetails');
+            container.innerHTML = content;
+            document.getElementById('viewModal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeViewModal() {
+            document.getElementById('viewModal').classList.add('hidden');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Delete Modal Functions
+        let orderToDelete = null;
+        function openDeleteModal(orderId) {
+            orderToDelete = orderId;
+            document.getElementById('deleteOrderId').textContent = orderId;
+            document.getElementById('deleteModal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeDeleteModal() {
+            document.getElementById('deleteModal').classList.add('hidden');
+            document.body.style.overflow = 'auto';
+            orderToDelete = null;
+        }
+
+        document.getElementById('confirmDelete')?.addEventListener('click', () => {
+            if (orderToDelete) {
+                const index = ordersData.findIndex(o => o.id === orderToDelete);
+                if (index > -1) {
+                    ordersData.splice(index, 1);
+                    applyFilters();
+                    if (window.showToast) window.showToast(`Order ${orderToDelete} deleted`, 'success');
+                }
+                closeDeleteModal();
+            }
         });
 
         // Filter Event Listeners
@@ -635,26 +751,65 @@
         window.viewOrder = function (orderId) {
             const order = ordersData.find(o => o.id === orderId);
             if (order) {
-                alert('Viewing Order: ' + order.id + '\n\nCustomer: ' + order.customer + '\nService: ' + order.service + '\nStatus: ' + order.status + '\nDate: ' + formatDate(order.date) + '\nAmount: ' + formatCurrency(order.amount));
+                const content = `
+                    <div class="grid grid-cols-2 gap-4 text-sm">
+                        <div>
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Order ID</p>
+                            <p class="dark:text-white font-semibold">${order.id}</p>
+                        </div>
+                        <div>
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Status</p>
+                            <div>${getStatusBadge(order.status)}</div>
+                        </div>
+                        <div class="col-span-2">
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Customer</p>
+                            <div class="flex items-center mt-1">
+                                <div class="w-6 h-6 rounded-full bg-${order.color}-100 flex items-center justify-center text-${order.color}-600 font-bold text-[10px] mr-2">
+                                    ${order.initials}
+                                </div>
+                                <span class="dark:text-white font-semibold">${order.customer}</span>
+                            </div>
+                        </div>
+                        <div class="col-span-2">
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Service</p>
+                            <p class="dark:text-white font-semibold">${order.service}</p>
+                        </div>
+                        <div>
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Date</p>
+                            <p class="dark:text-white font-semibold">${formatDate(order.date)}</p>
+                        </div>
+                        <div>
+                            <p class="text-gray-400 font-bold uppercase text-[10px]">Amount</p>
+                            <p class="dark:text-white font-bold text-lg text-primary-500">${formatCurrency(order.amount)}</p>
+                        </div>
+                    </div>
+                `;
+                openViewModal(content);
             }
         };
 
         window.editOrder = function (orderId) {
             const order = ordersData.find(o => o.id === orderId);
             if (order) {
-                console.log('Edit order:', order);
+                // For this demo, we reuse the create modal and update title
+                const modalTitle = modal.querySelector('h3');
+                const submitBtn = modal.querySelector('button[type="submit"]');
+
+                modalTitle.textContent = 'Edit Order';
+                submitBtn.textContent = 'Save Changes';
+
+                // Fill form (simplified as we don't have IDs on inputs yet)
+                modal.querySelector('input[type="text"]').value = order.customer;
+                modal.querySelector('select').value = order.service;
+                modal.querySelector('input[type="date"]').value = order.date;
+                modal.querySelector('input[type="number"]').value = order.amount;
+
+                openModal();
             }
         };
 
         window.deleteOrder = function (orderId) {
-            if (confirm('Are you sure you want to delete this order?')) {
-                const index = ordersData.findIndex(o => o.id === orderId);
-                if (index > -1) {
-                    ordersData.splice(index, 1);
-                    applyFilters();
-                    console.log('Order deleted:', orderId);
-                }
-            }
+            openDeleteModal(orderId);
         };
 
         // Initialize
