--- a/Commercial Janitorial Services/client/billing.html
+++ b/Commercial Janitorial Services/client/billing.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billing & Invoices - NovaSite Client</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
+
     <!-- FOUC Prevention - Apply theme and RTL immediately -->
     <script>
         (function () {
@@ -114,12 +117,27 @@
                     </a>
 
                     <!-- Mobile-only Notifications -->
-                    <a href="#"
-                        class="lg:hidden flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
-                        <i class="fa-solid fa-bell w-6"></i>
-                        <span>Notifications</span>
-                        <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
-                    </a>
+                    <div class="lg:hidden">
+                        <button id="notifications-toggle"
+                            class="w-full flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                            <i class="fa-solid fa-bell w-6"></i>
+                            <span>Notifications</span>
+                            <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
+                        </button>
+                        <div id="notifications-dropdown-mobile"
+                            class="hidden pl-10 pr-4 py-2 space-y-4 border-l-2 border-primary-100 dark:border-primary-900/30 ms-4 mt-2">
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">Cleaning Scheduled</p>
+                                <p class="text-xs text-gray-500">1 hour ago</p>
+                            </div>
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">Invoice Generated</p>
+                                <p class="text-xs text-gray-500">3 hours ago</p>
+                            </div>
+                            <a href="#" class="block text-xs text-primary-500 font-bold hover:underline py-2">View all
+                                notifications</a>
+                        </div>
+                    </div>
 
                     <!-- Mobile-only Preferences -->
                     <div class="lg:hidden mt-8 pt-8 border-t border-gray-100 dark:border-gray-800">
@@ -259,55 +277,58 @@
 
                     <div
                         class="bg-white dark:bg-dark-card rounded-[2rem] border border-gray-100 dark:border-gray-800 shadow-sm overflow-hidden">
-                        <table class="w-full text-left">
-                            <thead>
-                                <tr class="bg-gray-50 dark:bg-gray-800/50">
-                                    <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
-                                        Invoice ID</th>
-                                    <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">Date
-                                    </th>
-                                    <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
-                                        Service</th>
-                                    <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
-                                        Status</th>
-                                    <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
-                                        Amount</th>
-                                    <th
-                                        class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider text-right">
-                                        Action</th>
-                                </tr>
-                            </thead>
-                            <tbody class="divide-y divide-gray-50 dark:divide-gray-800">
-                                <tr>
-                                    <td class="px-8 py-6 font-bold dark:text-white">#INV-8824</td>
-                                    <td class="px-8 py-6 text-sm text-gray-500">Oct 22, 2025</td>
-                                    <td class="px-8 py-6 text-sm dark:text-gray-300">Office Deep Cleaning</td>
-                                    <td class="px-8 py-6">
-                                        <span
-                                            class="px-3 py-1 bg-green-50 dark:bg-green-900/30 text-green-600 text-[10px] font-bold rounded-full uppercase">Paid</span>
-                                    </td>
-                                    <td class="px-8 py-6 font-bold dark:text-white">$120.00</td>
-                                    <td class="px-8 py-6 text-right">
-                                        <button
-                                            class="text-primary-500 hover:text-primary-600 font-bold text-sm">Download</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="px-8 py-6 font-bold dark:text-white">#INV-8715</td>
-                                    <td class="px-8 py-6 text-sm text-gray-500">Oct 15, 2025</td>
-                                    <td class="px-8 py-6 text-sm dark:text-gray-300">Window Sanitization</td>
-                                    <td class="px-8 py-6">
-                                        <span
-                                            class="px-3 py-1 bg-green-50 dark:bg-green-900/30 text-green-600 text-[10px] font-bold rounded-full uppercase">Paid</span>
-                                    </td>
-                                    <td class="px-8 py-6 font-bold dark:text-white">$85.00</td>
-                                    <td class="px-8 py-6 text-right">
-                                        <button
-                                            class="text-primary-500 hover:text-primary-600 font-bold text-sm">Download</button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left min-w-[800px]">
+                                <thead>
+                                    <tr class="bg-gray-50 dark:bg-gray-800/50">
+                                        <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
+                                            Invoice ID</th>
+                                        <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
+                                            Date
+                                        </th>
+                                        <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
+                                            Service</th>
+                                        <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
+                                            Status</th>
+                                        <th class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider">
+                                            Amount</th>
+                                        <th
+                                            class="px-8 py-5 text-xs font-bold text-gray-400 uppercase tracking-wider text-right">
+                                            Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="divide-y divide-gray-50 dark:divide-gray-800">
+                                    <tr>
+                                        <td class="px-8 py-6 font-bold dark:text-white">#INV-8824</td>
+                                        <td class="px-8 py-6 text-sm text-gray-500">Oct 22, 2025</td>
+                                        <td class="px-8 py-6 text-sm dark:text-gray-300">Office Deep Cleaning</td>
+                                        <td class="px-8 py-6">
+                                            <span
+                                                class="px-3 py-1 bg-green-50 dark:bg-green-900/30 text-green-600 text-[10px] font-bold rounded-full uppercase">Paid</span>
+                                        </td>
+                                        <td class="px-8 py-6 font-bold dark:text-white">$120.00</td>
+                                        <td class="px-8 py-6 text-right">
+                                            <button onclick="downloadInvoice('#INV-8824')"
+                                                class="text-primary-500 hover:text-primary-600 font-bold text-sm">Download</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-8 py-6 font-bold dark:text-white">#INV-8715</td>
+                                        <td class="px-8 py-6 text-sm text-gray-500">Oct 15, 2025</td>
+                                        <td class="px-8 py-6 text-sm dark:text-gray-300">Window Sanitization</td>
+                                        <td class="px-8 py-6">
+                                            <span
+                                                class="px-3 py-1 bg-green-50 dark:bg-green-900/30 text-green-600 text-[10px] font-bold rounded-full uppercase">Paid</span>
+                                        </td>
+                                        <td class="px-8 py-6 font-bold dark:text-white">$85.00</td>
+                                        <td class="px-8 py-6 text-right">
+                                            <button onclick="downloadInvoice('#INV-8715')"
+                                                class="text-primary-500 hover:text-primary-600 font-bold text-sm">Download</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -315,6 +336,26 @@
     </div>
 
     <!-- Scripts -->
+    <script>
+        function downloadInvoice(invoiceId) {
+            if (window.showToast) {
+                window.showToast(`Preparing ${invoiceId} for download...`, 'info');
+
+                setTimeout(() => {
+                    // Create a mock blob to simulate download
+                    const element = document.createElement('a');
+                    const file = new Blob(['Invoice Data for ' + invoiceId], { type: 'text/plain' });
+                    element.href = URL.createObjectURL(file);
+                    element.download = `${invoiceId}-report.txt`;
+                    document.body.appendChild(element);
+                    element.click();
+                    document.body.removeChild(element);
+
+                    window.showToast(`${invoiceId} downloaded successfully!`, 'success');
+                }, 1500);
+            }
+        }
+    </script>
     <script src="../assets/js/main.js"></script>
 </body>
 
