--- a/Commercial Janitorial Services/client/index.html
+++ b/Commercial Janitorial Services/client/index.html
@@ -116,12 +116,27 @@
                     </a>
 
                     <!-- Mobile-only Notifications -->
-                    <a href="#"
-                        class="lg:hidden flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
-                        <i class="fa-solid fa-bell w-6"></i>
-                        <span>Notifications</span>
-                        <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
-                    </a>
+                    <div class="lg:hidden">
+                        <button id="notifications-toggle"
+                            class="w-full flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                            <i class="fa-solid fa-bell w-6"></i>
+                            <span>Notifications</span>
+                            <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
+                        </button>
+                        <div id="notifications-dropdown-mobile"
+                            class="hidden pl-10 pr-4 py-2 space-y-4 border-l-2 border-primary-100 dark:border-primary-900/30 ms-4 mt-2">
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">Cleaning Scheduled</p>
+                                <p class="text-xs text-gray-500">1 hour ago</p>
+                            </div>
+                            <div class="py-1">
+                                <p class="text-sm font-semibold dark:text-gray-200">Invoice Generated</p>
+                                <p class="text-xs text-gray-500">3 hours ago</p>
+                            </div>
+                            <a href="#" class="block text-xs text-primary-500 font-bold hover:underline py-2">View all
+                                notifications</a>
+                        </div>
+                    </div>
 
                     <!-- Mobile-only Preferences -->
                     <div class="lg:hidden mt-8 pt-8 border-t border-gray-100 dark:border-gray-800">
@@ -246,19 +261,20 @@
             </header>
 
             <!-- Scrollable Content -->
-            <div class="flex-1 overflow-y-auto p-6">
+            <div class="flex-1 overflow-y-auto p-4 sm:p-6">
                 <!-- Welcome Banner -->
                 <div
-                    class="mb-8 p-8 rounded-[2rem] bg-gradient-to-br from-primary-600 to-primary-800 text-white relative overflow-hidden shadow-2xl shadow-primary-500/20">
+                    class="mb-8 p-6 sm:p-8 rounded-2xl sm:rounded-[2rem] bg-gradient-to-br from-primary-600 to-primary-800 text-white relative overflow-hidden shadow-2xl shadow-primary-500/20">
                     <div class="relative z-10">
                         <h2 class="text-3xl font-bold font-heading mb-2">Welcome back, Robert!</h2>
                         <p class="text-primary-100">Your next cleaning service is scheduled for tomorrow at 6:00 PM.</p>
-                        <div class="mt-6 flex gap-4">
-                            <button onclick="window.showToast('Booking feature coming soon!', 'info')"
-                                class="px-6 py-3 bg-white text-primary-600 font-bold rounded-xl hover:scale-105 transition-all">Book
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <button onclick="openBookServiceModal()"
+                                class="w-full sm:w-auto px-6 py-3 bg-white text-primary-600 font-bold rounded-xl hover:scale-[1.02] transition-all">Book
                                 New Service</button>
-                            <button onclick="window.showToast('Support chat opening...', 'info')"
-                                class="px-6 py-3 bg-primary-500/30 backdrop-blur-md text-white border border-white/20 font-bold rounded-xl hover:bg-primary-500/40 transition-all">Support
+                            <button
+                                onclick="window.showToast('Connecting to a support agent...', 'info'); setTimeout(() => window.showToast('An agent will be with you shortly.', 'success'), 1500)"
+                                class="w-full sm:w-auto px-6 py-3 bg-primary-500/30 backdrop-blur-md text-white border border-white/20 font-bold rounded-xl hover:bg-primary-500/40 transition-all">Support
                                 Chat</button>
                         </div>
                     </div>
@@ -270,7 +286,7 @@
                 <!-- Stats Grid -->
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
                     <div
-                        class="bg-white dark:bg-dark-card p-6 rounded-3xl border border-gray-100 dark:border-gray-800 shadow-sm">
+                        class="bg-white dark:bg-dark-card p-5 sm:p-6 rounded-2xl sm:rounded-3xl border border-gray-100 dark:border-gray-800 shadow-sm">
                         <div class="flex items-center justify-between mb-4">
                             <div
                                 class="w-12 h-12 rounded-2xl bg-blue-50 dark:bg-blue-900/30 text-blue-600 flex items-center justify-center">
@@ -378,10 +394,113 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Book Service Modal -->
+            <div id="bookServiceModal" class="fixed inset-0 z-50 hidden overflow-y-auto scrollbar-hide">
+                <div class="fixed inset-0 bg-black/50 backdrop-blur-sm" onclick="closeBookServiceModal()"></div>
+                <div class="flex min-h-full items-center justify-center p-3 pointer-events-none">
+                    <div class="bg-white dark:bg-dark-card rounded-2xl shadow-2xl w-full max-w-[290px] sm:max-w-lg p-4 sm:p-8 relative pointer-events-auto"
+                        onclick="event.stopPropagation()">
+                        <button onclick="closeBookServiceModal()"
+                            class="absolute top-3 right-3 text-gray-400 hover:text-gray-600 dark:hover:text-gray-300">
+                            <i class="fa-solid fa-times text-lg"></i>
+                        </button>
+                        <h3 class="text-lg font-bold font-heading dark:text-white mb-4">Book New Service</h3>
+                        <form onsubmit="submitBooking(event)">
+                            <div class="mb-3">
+                                <label class="block text-xs font-semibold text-gray-500 mb-1">Service Type</label>
+                                <select id="serviceType"
+                                    class="w-full px-3 py-2 text-sm rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white border border-gray-100 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-primary-500"
+                                    required>
+                                    <option value="">Select a service</option>
+                                    <option value="office-cleaning">Office Deep Cleaning</option>
+                                    <option value="window-cleaning">Window Sanitization</option>
+                                    <option value="carpet-cleaning">Carpet Cleaning</option>
+                                    <option value="floor-waxing">Floor Waxing</option>
+                                    <option value="green-cleaning">Green Cleaning</option>
+                                    <option value="post-construction">Post-Construction Cleanup</option>
+                                    <option value="sanitization">Sanitization Services</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label class="block text-xs font-semibold text-gray-500 mb-1">Preferred Date</label>
+                                <input type="date" id="serviceDate"
+                                    class="w-full px-3 py-2 text-sm rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white border border-gray-100 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-primary-500"
+                                    required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="block text-xs font-semibold text-gray-500 mb-1">Preferred Time</label>
+                                <select id="serviceTime"
+                                    class="w-full px-3 py-2 text-sm rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white border border-gray-100 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-primary-500"
+                                    required>
+                                    <option value="">Select a time</option>
+                                    <option value="08:00">8:00 AM</option>
+                                    <option value="09:00">9:00 AM</option>
+                                    <option value="10:00">10:00 AM</option>
+                                    <option value="11:00">11:00 AM</option>
+                                    <option value="12:00">12:00 PM</option>
+                                    <option value="14:00">2:00 PM</option>
+                                    <option value="15:00">3:00 PM</option>
+                                    <option value="16:00">4:00 PM</option>
+                                    <option value="17:00">5:00 PM</option>
+                                    <option value="18:00">6:00 PM</option>
+                                </select>
+                            </div>
+                            <div class="mb-4">
+                                <label class="block text-xs font-semibold text-gray-500 mb-1">Special
+                                    Instructions</label>
+                                <textarea id="serviceNotes" rows="2"
+                                    class="w-full px-3 py-2 text-sm rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white border border-gray-100 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-primary-500"
+                                    placeholder="Any requirements..."></textarea>
+                            </div>
+                            <div class="flex space-x-2">
+                                <button type="button" onclick="closeBookServiceModal()"
+                                    class="flex-1 px-4 py-2 text-sm rounded-xl bg-gray-100 dark:bg-gray-800 dark:text-white font-semibold hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">Cancel</button>
+                                <button type="submit"
+                                    class="flex-1 px-4 py-2 text-sm rounded-xl bg-primary-500 text-white font-semibold hover:bg-primary-600 transition-all">Book</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
     <!-- Scripts -->
+    <script>
+        // Book Service Modal Functions
+        function openBookServiceModal() {
+            document.getElementById('bookServiceModal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeBookServiceModal() {
+            document.getElementById('bookServiceModal').classList.add('hidden');
+            document.body.style.overflow = '';
+        }
+
+        function submitBooking(event) {
+            event.preventDefault();
+            const serviceType = document.getElementById('serviceType').value;
+            const serviceDate = document.getElementById('serviceDate').value;
+            const serviceTime = document.getElementById('serviceTime').value;
+
+            if (serviceType && serviceDate && serviceTime) {
+                closeBookServiceModal();
+                if (window.showToast) {
+                    window.showToast('Service booked successfully! Confirmation sent to your email.', 'success');
+                }
+                event.target.reset();
+            }
+        }
+
+        // Close modals on Escape key
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'Escape') {
+                closeBookServiceModal();
+            }
+        });
+    </script>
     <script src="../assets/js/main.js"></script>
 </body>
 
